Fix imports and change URL deprecations