@@ -4,6 +4,7 @@ import com.fasterxml.jackson.databind.JsonDeserializer;
 import fr.rakambda.channelpointsminer.miner.tests.ParallelizableTest;
 import org.junit.jupiter.api.Test;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -11,12 +12,12 @@ import static org.assertj.core.api.Assertions.assertThat;
 class URLDeserializerTest extends DeserializerTest<URL>{
 	@Test
 	void success() throws MalformedURLException{
-		assertThat(deserialize("\"https://test.com/path/to/dir\"")).isEqualTo(new URL("https://test.com/path/to/dir"));
+		assertThat(deserialize("\"https://test.com/path/to/dir\"")).isEqualTo(URI.create("https://test.com/path/to/dir").toURL());
 	}
 	
 	@Test
 	void noSchemeAssumesHttps() throws MalformedURLException{
-		assertThat(deserialize("\"test.com/path/to/dir\"")).isEqualTo(new URL("https://test.com/path/to/dir"));
+		assertThat(deserialize("\"test.com/path/to/dir\"")).isEqualTo(URI.create("https://test.com/path/to/dir").toURL());
 	}
 	
 	@Test
